# ztumztum

./: CMakeLists.txt  CMakeLists.txt.bak_final  CMakeLists.txt.bak_old  README.md  blake3hasher.py  omvll_config.py  sigger-fast-colored.py
JProvider/: jprovider.cpp  polymorph-lib.h
JProvider/junkcode/: junkcodes.hpp
TaleProtect/: gcontext.c  gcontext.h  tale-protect.c  todo
TaleProtect/demolisher/: page_molester.c  page_molester.h  rainbow_terminator.c  rainbow_terminator.h  smash.c  smash.h  stackoverflower.c  stackoverflower.h  threads_kill_recursive.c  threads_kill_recursive.h
TaleProtect/func_resolver/: func_name_generator.py  func_resolver_3000.c  func_resolver_3000.h  thunk_gen.py  typedef_generator.py
TaleProtect/hook_detector/: hook_detector.c  hook_detector.c.old.bak  hook_detector.h
TaleProtect/indirect_registration/: indirect_registration.c  indirect_registration.h
TaleProtect/integrity_monitor/app_integrity/: app_integrity.c  app_integrity.h
TaleProtect/integrity_monitor/code_integrity/: calc_elf_hashes.py-old  elfhasher_final.py
TaleProtect/integrity_monitor/code_integrity/self/: code_integrity_bootstrap_0.c  code_integrity_bootstrap_0.h  code_integrity_trusted_0.c  code_integrity_trusted_0.c.bak  code_integrity_trusted_0.h
TaleProtect/integrity_monitor/file_integrity/native_library_directory/: native_library_directory_file_integrity.c  native_library_directory_file_integrity.h
TaleProtect/mappings/compat/: dexmappings.c  dexmappings.h
TaleProtect/metas/: jprovider.c  jprovider.h
TaleProtect/nicetits/: nicetits.c  nicetits.h  todo
TaleProtect/not_an_elf/: not_an_elf.c  not_an_elf.h
TaleProtect/obfuscators/: com_tale_stars.ch  data_app.ch  data_local.ch  data_local_tmp.ch  dbus.ch  dobby.ch  fmt_base_apk.ch  fmt_str_str.ch  frida.ch  frida_agent.ch  frida_gadget.ch  frida_pipe.ch  frida_server.ch  gadget.ch  gmain.ch  gum_js.ch  hardcoder8.py  hardcoder9.py  hook.ch  inject.ch  interceptor.ch  jdwp.ch  ld_preload_ex.ch  ld_preload_norm.ch  libb_so.ch  libstars_so.ch  libtale_not_an_elf_so.ch  libtale_protect_so.ch  libtale_so.ch  literal_obfuscator.c  literal_obfuscator.h  logwrapper.ch  mnt.ch  nicedeck_url.ch  nicetits_lowend_url.ch  nicetits_url.ch  nzijsy_J.ch  nzijsy_aC.ch  nzijsy_aq.ch  nzijsy_ay.ch  (+19 more)
TaleProtect/obfuscators/gened/: com_tale_royale.ch  libapp_so.ch  libb_so.ch  libc++_shared_so.ch  libflutter_so.ch  libfmod_so.ch  libfmodstudio_so.ch  libg_so.ch  libimage_processing_util_jni_so.ch  libroyale_config_so.ch  libroyale_script_so.ch  libroyale_so.ch  libscid_sdk_so.ch  libsentry_android_so.ch  libsentry_so.ch  libstars_config_so.ch  libstars_script_so.ch  libstars_so.ch  libtale_config_so.ch  libtale_not_an_elf_so.ch  libtale_protect_so.ch  libtale_script_so.ch  libtale_so.ch  libtoolChecker_so.ch  proc__d_net_tcp.ch  proc__d_net_tcp6.ch  proc__d_net_unix.ch  proc_net_tcp.ch  proc_net_tcp6.ch  proc_net_unix.ch  wrap_com_tale_royale.ch
TaleProtect/process_monitor/: needles
TaleProtect/process_monitor/injection_detection/cmdline_protection/: cmdline_protection.c  cmdline_protection.h
TaleProtect/process_monitor/injection_detection/ld_preload_protection/: ld_preload_protection.c  ld_preload_protection.h
TaleProtect/process_monitor/injection_detection/proc_exe_protection/: proc_exe_protection.c  proc_exe_protection.h
TaleProtect/process_monitor/injection_detection/wrap_sysprop_protection/: wrap_sysprop_protection.c  wrap_sysprop_protection.h
TaleProtect/process_monitor/maps_monitor/maps_entries_protection/: maps_entries_protection.c  maps_entries_protection.h
TaleProtect/process_monitor/maps_monitor/maps_memory_protection/: todo
TaleProtect/process_monitor/native_library_directory_entries_protection/: native_library_directory_entries_protection.c  native_library_directory_entries_protection.h
TaleProtect/process_monitor/net_monitor/: net_monitor_protection.c  net_monitor_protection.h
TaleProtect/process_monitor/threads_monitor/threads_name_protection/: threads_name_protection.c  threads_name_protection.h
TaleProtect/resolvers/compat/: metadata_resolver.c  metadata_resolver.h
TaleProtect/resolvers/jprovider/: jprovider_resolver.c  jprovider_resolver.h
TaleProtect/resolvers/old/: metadata.cpp  metadata.hpp
TaleProtect/secure_memory_wipe/: secure_memory_wipe.c  secure_memory_wipe.h
TaleProtect/secure_syscall/: secure_syscall.c  secure_syscall.h  secure_syscall.h.bak  secure_syscall.h.bak2  syscall_stub_generator.py
TaleProtect/symbol_list/: symbol_list.h
TaleProtect/talecrypt/compat/: talecrypt.c  talecrypt.h
TaleProtect/talecrypt/cpp/: talecrypt.cpp  talecrypt.hpp
TaleProtect/tools/: utils.c  utils.h
TaleProtect/tools/dawnloader/: dawnloader.c  dawnloader.h
TaleProtect/tools/list_dir_entries/: list_dir_entries.c  list_dir_entries.h
TaleProtect/tools/putex/: putex.c  putex.h
TaleProtect/tools/segment_resolver/: segment_resolver.c  segment_resolver.c.bak  segment_resolver.h
TaleProtect/tools/shemaphore/: shemaphore.c  shemaphore.h
TaleProtect/unpack_procedure/libg/: im_elfing_it-slow-asf.c.bak  im_elfing_it.c  im_elfing_it.c.bak  im_elfing_it.h  sections_metadata.c  sections_metadata.h
elfpackingsteps/: CMakeLists.txt  calc_pc_rel_offset.py  cmds  patch_dt_init_cli.py  patch_sym.py  set_entrypoint.py
global_common/: common.h  junkcode.h
talecrypt/: keys.hpp  main.cpp
talecrypt/talecrypt/: talecrypt.cpp  talecrypt.hpp
unstdlib/: CMakeLists.txt  README.md
unstdlib/src/: _unstdcommon.h  unstdbitutils.c  unstdbitutils.h  unstdbool.h  unstdbytebuffer.c  unstdbytebuffer.h  unstdchar_compat.c  unstdchar_compat.h  unstddescriptor.h  unstdinttypes.h  unstdio.c  unstdio.h  unstdio_compat.c  unstdio_compat.h  unstditertools.h  unstdmemory.c  unstdmemory.h  unstdmemory_compat.c  unstdmemory_compat.h  unstdpair.h  unstdprintf_compat.c  unstdprintf_compat.h  unstdqueue.c  unstdqueue.h  unstdrandom.c  unstdsocket.c  unstdsocket.h  unstdstring.c  unstdstring.h  unstdstring_compat.c  unstdstring_compat.h  unstdubytes.c  unstdubytes.h  unstdvector.h
unstdlib/test/: test_unstdlib.h
(+17 files in other folders)
